# card-scanner

./: Cargo.toml  README.md  profiles.toml
examples/: collect_prices.rs  fetch_product.rs  volume_alerts.rs
src/: client.rs  error.rs  lib.rs  main.rs
src/api/: details.rs  latest_sales.rs  listings.rs  market_prices.rs  mod.rs  price_history.rs  price_points.rs  search.rs
src/cmd/: alerts.rs  collect.rs  common.rs  fetch.rs  graphic.rs  index.rs  mod.rs  x_post.rs
src/models/: listing.rs  mod.rs  price.rs  product.rs  sale.rs
