[package]
name = "tcg-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
urlencoding = "2"

[[example]]
name = "fetch_product"
path = "examples/fetch_product.rs"
