[package]
name = "tcg-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"

[[example]]
name = "fetch_product"
path = "examples/fetch_product.rs"

[[example]]
name = "collect_prices"
path = "examples/collect_prices.rs"

[[example]]
name = "volume_alerts"
path = "examples/volume_alerts.rs"
