[package]
name = "tcg-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
rand = "0.8"
dotenvy = "0.15"
